# slackbotbuilder

./: .gitignore  README.md  agents.py  app.py  credentials.yaml  credentials_template.yaml  default_agent.py  global_instructions.md  log_analysis_agent.py  mcp_server_readme.md  prompt_executor.py  pyproject.toml  requirements.txt  setup_credentials.py  slack_credentials_manager.py  slack_events.py  slack_manifest.json  workflow_manager.py  workflows.yaml  workflows_readme.MD
agents/: agents.py  default_agent.py  prompt_executor.py
mcp_servers/: mcp.json  mcp_utils.py
prompts/: grafana_dashboard_check.md  grafana_nonprod_check.md  malicious_ip_restriction.md  sample_prompt.md  service_latency_spike_analyser.md  service_logs.md
scripts/: api_health_check_with_sdk.py  build_verification_tool.py  clear_server_caches_tool.py  cpu_usage_triage_with_sdk.py  disk_io_triage_with_sdk.py  disk_space_triage_with_sdk.py  grafana_ai_tool.py  grafana_dashboard_monitoring_with_sdk.py  grafana_global_slo_monitoring_with_sdk.py  grafana_mcp_script.py  grafana_non_ai_sdk.py  grafana_non_ai_tool.py  hello_response.py  high_load_triage_with_sdk.py  k8s_5xx_errors_tool.py  k8s_auto_restart_tool.py  llm_chat.py  mysql_high_load_check_with_sdk.py  prompt_executor.py  sample_response.py
slack_utils/: slack_credentials_manager.py  slack_events.py  slack_utils.py
